--- a/Source/Strive/Strive.Data/Strive.Data.Events/Strive.Data.Events.csproj
+++ b/Source/Strive/Strive.Data/Strive.Data.Events/Strive.Data.Events.csproj
@@ -5,15 +5,14 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{81F8F1E4-640B-45B7-9000-072D4C96F8A0}</ProjectGuid>
+    <ProjectGuid>{0D97F99D-DAEE-4C38-85A4-AFADD33D0C62}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Strive.Model</RootNamespace>
-    <AssemblyName>Strive.Model</AssemblyName>
+    <RootNamespace>Strive.Data.Events</RootNamespace>
+    <AssemblyName>Strive.Data.Events</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-    <CodeContractsAssemblyMode>1</CodeContractsAssemblyMode>
+    <CodeContractsAssemblyMode>0</CodeContractsAssemblyMode>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -55,38 +54,30 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FSharp.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <Private>True</Private>
-    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="UpdateControls, Version=2.1.1.0, Culture=neutral, PublicKeyToken=19e83a8289e31a8f, processorArchitecture=MSIL">
-      <HintPath>..\..\..\ThirdParty\UpdateControls\UpdateControls.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Affinity.cs" />
-    <Compile Include="AModel.cs" />
-    <Compile Include="CombatantModel.cs" />
-    <Compile Include="DictionaryModel.cs" />
-    <Compile Include="PlanModel.cs" />
-    <Compile Include="Recorded.cs" />
-    <Compile Include="TaskModel.cs" />
-    <Compile Include="EntityModel.cs" />
+    <Compile Include="SkillEvent.cs" />
+    <Compile Include="EntityUpdateEvent.cs" />
+    <Compile Include="Event.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="History.cs" />
-    <Compile Include="TerrainModel.cs" />
-    <Compile Include="WorldModel.cs" />
+    <Compile Include="TaskUpdateEvent.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Strive.Common\Strive.Common.csproj">
+    <ProjectReference Include="..\..\Strive.Common\Strive.Common.csproj">
       <Project>{FCB073C1-253E-46D8-BCE4-79B1C1616058}</Project>
       <Name>Strive.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Strive.Model\Strive.Model.csproj">
+      <Project>{81F8F1E4-640B-45B7-9000-072D4C96F8A0}</Project>
+      <Name>Strive.Model</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
