Refactoring to event based world changes

--- a/Source/Strive/Strive.Model/Strive.Model.csproj
+++ b/Source/Strive/Strive.Model/Strive.Model.csproj
@@ -74,6 +74,7 @@
     <Compile Include="AModel.cs" />
     <Compile Include="CombatantModel.cs" />
     <Compile Include="DictionaryModel.cs" />
+    <Compile Include="PartyModel.cs" />
     <Compile Include="PlanModel.cs" />
     <Compile Include="Recorded.cs" />
     <Compile Include="TaskModel.cs" />
