--- a/Source/Strive/Strive.Network/Strive.Network.Messages/Strive.Network.Messages.csproj
+++ b/Source/Strive/Strive.Network/Strive.Network.Messages/Strive.Network.Messages.csproj
@@ -147,7 +147,9 @@
     <Compile Include="ToServer\CancelSkill.cs" />
     <Compile Include="ToServer\ChangeStance.cs" />
     <Compile Include="ToServer\Communicate.cs" />
+    <Compile Include="ToServer\CreateEntity.cs" />
     <Compile Include="ToServer\CreateParty.cs" />
+    <Compile Include="ToServer\CreateTask.cs" />
     <Compile Include="ToServer\Emote.cs" />
     <Compile Include="ToServer\PossessMobile.cs" />
     <Compile Include="ToServer\InviteToParty.cs" />
