--- a/Source/Strive/Strive.Client/Strive.Client.Logic/Strive.Client.Logic.csproj
+++ b/Source/Strive/Strive.Client/Strive.Client.Logic/Strive.Client.Logic.csproj
@@ -5,15 +5,14 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{81F8F1E4-640B-45B7-9000-072D4C96F8A0}</ProjectGuid>
+    <ProjectGuid>{70800FCC-1029-456A-A81C-DBF4A21C5DEE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Strive.Model</RootNamespace>
-    <AssemblyName>Strive.Model</AssemblyName>
+    <RootNamespace>Strive.Client.Logic</RootNamespace>
+    <AssemblyName>Strive.Client.Logic</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-    <CodeContractsAssemblyMode>1</CodeContractsAssemblyMode>
+    <CodeContractsAssemblyMode>0</CodeContractsAssemblyMode>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -28,12 +27,12 @@
     <CodeContractsRuntimeThrowOnFailure>True</CodeContractsRuntimeThrowOnFailure>
     <CodeContractsRuntimeCallSiteRequires>False</CodeContractsRuntimeCallSiteRequires>
     <CodeContractsRunCodeAnalysis>False</CodeContractsRunCodeAnalysis>
-    <CodeContractsNonNullObligations>True</CodeContractsNonNullObligations>
-    <CodeContractsBoundsObligations>True</CodeContractsBoundsObligations>
-    <CodeContractsArithmeticObligations>True</CodeContractsArithmeticObligations>
-    <CodeContractsRedundantAssumptions>True</CodeContractsRedundantAssumptions>
+    <CodeContractsNonNullObligations>False</CodeContractsNonNullObligations>
+    <CodeContractsBoundsObligations>False</CodeContractsBoundsObligations>
+    <CodeContractsArithmeticObligations>False</CodeContractsArithmeticObligations>
+    <CodeContractsRedundantAssumptions>False</CodeContractsRedundantAssumptions>
     <CodeContractsRunInBackground>True</CodeContractsRunInBackground>
-    <CodeContractsShowSquigglies>True</CodeContractsShowSquigglies>
+    <CodeContractsShowSquigglies>False</CodeContractsShowSquigglies>
     <CodeContractsUseBaseLine>False</CodeContractsUseBaseLine>
     <CodeContractsEmitXMLDocs>False</CodeContractsEmitXMLDocs>
     <CodeContractsCustomRewriterAssembly />
@@ -42,7 +41,7 @@
     <CodeContractsExtraRewriteOptions />
     <CodeContractsExtraAnalysisOptions />
     <CodeContractsBaseLineFile />
-    <CodeContractsCacheAnalysisResults>True</CodeContractsCacheAnalysisResults>
+    <CodeContractsCacheAnalysisResults>False</CodeContractsCacheAnalysisResults>
     <CodeContractsRuntimeCheckingLevel>Full</CodeContractsRuntimeCheckingLevel>
     <CodeContractsReferenceAssembly>Build</CodeContractsReferenceAssembly>
   </PropertyGroup>
@@ -55,38 +54,42 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FSharp.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <Private>True</Private>
+    <Reference Include="Common.Logging">
+      <HintPath>..\..\..\ThirdParty\Common.Logging\Common.Logging.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="UpdateControls, Version=2.1.1.0, Culture=neutral, PublicKeyToken=19e83a8289e31a8f, processorArchitecture=MSIL">
-      <HintPath>..\..\..\ThirdParty\UpdateControls\UpdateControls.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Affinity.cs" />
-    <Compile Include="AModel.cs" />
-    <Compile Include="CombatantModel.cs" />
-    <Compile Include="DictionaryModel.cs" />
-    <Compile Include="PlanModel.cs" />
-    <Compile Include="Recorded.cs" />
-    <Compile Include="TaskModel.cs" />
-    <Compile Include="EntityModel.cs" />
+    <Compile Include="ClientSideMessageProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="History.cs" />
-    <Compile Include="TerrainModel.cs" />
-    <Compile Include="WorldModel.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Strive.Common\Strive.Common.csproj">
+    <ProjectReference Include="..\..\Strive.Common\Strive.Common.csproj">
       <Project>{FCB073C1-253E-46D8-BCE4-79B1C1616058}</Project>
       <Name>Strive.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Strive.Data\Strive.Data.Events\Strive.Data.Events.csproj">
+      <Project>{0D97F99D-DAEE-4C38-85A4-AFADD33D0C62}</Project>
+      <Name>Strive.Data.Events</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Strive.Model\Strive.Model.csproj">
+      <Project>{81F8F1E4-640B-45B7-9000-072D4C96F8A0}</Project>
+      <Name>Strive.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Strive.Network\Strive.Network.Messages\Strive.Network.Messages.csproj">
+      <Project>{EEEC18D5-063D-4DDD-8328-5182F1BA7F26}</Project>
+      <Name>Strive.Network.Messages</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Strive.Network\Strive.Network.Messaging\Strive.Network.Messaging.csproj">
+      <Project>{757BF7D3-B811-48D7-AE27-0842B0522536}</Project>
+      <Name>Strive.Network.Messaging</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
