--- a/Source/Strive/Strive.Server/Strive.Server.Logic/Strive.Server.Logic.csproj
+++ b/Source/Strive/Strive.Server/Strive.Server.Logic/Strive.Server.Logic.csproj
@@ -124,6 +124,7 @@
     <Reference Include="Common.Logging.Log4Net">
       <HintPath>..\..\..\ThirdParty\Common.Logging\Common.Logging.Log4Net.dll</HintPath>
     </Reference>
+    <Reference Include="FSharp.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="PresentationCore" />
     <Reference Include="System">
@@ -168,9 +169,6 @@
     </Compile>
     <Compile Include="ServerStatusModel.cs" />
     <Compile Include="SkillCommandProcessor.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Square.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="World.cs">
