--- a/Source/Strive/Strive.Server/Strive.Server.Console/Strive.Server.Console.csproj
+++ b/Source/Strive/Strive.Server/Strive.Server.Console/Strive.Server.Console.csproj
@@ -155,6 +155,10 @@
       <Project>{FCB073C1-253E-46D8-BCE4-79B1C1616058}</Project>
       <Name>Strive.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Strive.Model\Strive.Model.csproj">
+      <Project>{81F8F1E4-640B-45B7-9000-072D4C96F8A0}</Project>
+      <Name>Strive.Model</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Strive.Network\Strive.Network.Messaging\Strive.Network.Messaging.csproj">
       <Project>{757BF7D3-B811-48D7-AE27-0842B0522536}</Project>
       <Name>Strive.Network.Messaging</Name>
