--- a/Source/Strive/Strive.Server/Strive.Server.Logic.Tests/Strive.Server.Logic.Tests.csproj
+++ b/Source/Strive/Strive.Server/Strive.Server.Logic.Tests/Strive.Server.Logic.Tests.csproj
@@ -37,6 +37,7 @@
       <HintPath>..\..\..\ThirdParty\FluentAssertions\FluentAssertions.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -52,6 +53,18 @@
     <Compile Include="WorldTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Strive.Common\Strive.Common.csproj">
+      <Project>{FCB073C1-253E-46D8-BCE4-79B1C1616058}</Project>
+      <Name>Strive.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Strive.Data\Strive.Data.Events\Strive.Data.Events.csproj">
+      <Project>{0D97F99D-DAEE-4C38-85A4-AFADD33D0C62}</Project>
+      <Name>Strive.Data.Events</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Strive.Model\Strive.Model.csproj">
+      <Project>{81F8F1E4-640B-45B7-9000-072D4C96F8A0}</Project>
+      <Name>Strive.Model</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Strive.Network\Strive.Network.Messaging\Strive.Network.Messaging.csproj">
       <Project>{757BF7D3-B811-48D7-AE27-0842B0522536}</Project>
       <Name>Strive.Network.Messaging</Name>
