--- a/Source/Strive/Strive.Data/Strive.Data.Events/Strive.Data.Events.csproj
+++ b/Source/Strive/Strive.Data/Strive.Data.Events/Strive.Data.Events.csproj
@@ -65,6 +65,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PlanUpdateEvent.cs" />
     <Compile Include="SkillEvent.cs" />
     <Compile Include="EntityUpdateEvent.cs" />
     <Compile Include="Event.cs" />
