--- a/Source/Strive/Strive.Common/Strive.Common.csproj
+++ b/Source/Strive/Strive.Common/Strive.Common.csproj
@@ -128,6 +128,7 @@
     <Compile Include="StoppableThread.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Vernacular.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
