--- a/Source/Strive/Strive.WPF/Strive.WPF.csproj
+++ b/Source/Strive/Strive.WPF/Strive.WPF.csproj
@@ -78,44 +78,33 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PlanListView.xaml.cs">
+      <DependentUpon>PlanListView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="TimeLineView.xaml.cs">
       <DependentUpon>TimeLineView.xaml</DependentUpon>
     </Compile>
     <Compile Include="ListBoxBehavior.cs" />
-    <Compile Include="ResourceListView.xaml.cs">
-      <DependentUpon>ResourceListView.xaml</DependentUpon>
+    <Compile Include="EntityListView.xaml.cs">
+      <DependentUpon>EntityListView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="UnitModel.cs" />
-    <Compile Include="FactoryModel.cs" />
     <Compile Include="LogModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UnitViewModel.cs" />
-    <Compile Include="FactoryViewModel.cs" />
     <Compile Include="LogViewModel.cs" />
-    <Compile Include="UnitView.xaml.cs">
-      <DependentUpon>UnitView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="FactoryView.xaml.cs">
-      <DependentUpon>FactoryView.xaml</DependentUpon>
-    </Compile>
     <Compile Include="LogView.xaml.cs">
       <DependentUpon>LogView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="PlanListView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="TimeLineView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="ResourceListView.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="UnitView.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="FactoryView.xaml">
+    <Page Include="EntityListView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
