Double click flyto

--- a/Source/Strive/Strive.WPF/Strive.WPF.csproj
+++ b/Source/Strive/Strive.WPF/Strive.WPF.csproj
@@ -58,6 +58,7 @@
     <Reference Include="AvalonDock">
       <HintPath>..\..\ThirdParty\AvalonDock\AvalonDock.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
