--- a/Source/Strive/Strive.Server/Strive.Server.Logic.Tests/Strive.Server.Logic.Tests.csproj
+++ b/Source/Strive/Strive.Server/Strive.Server.Logic.Tests/Strive.Server.Logic.Tests.csproj
@@ -36,6 +36,7 @@
     <Reference Include="FluentAssertions">
       <HintPath>..\..\..\ThirdParty\FluentAssertions\FluentAssertions.dll</HintPath>
     </Reference>
+    <Reference Include="FSharp.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
