Added task assignment and a failing test of moving toward task completion

--- a/Source/Strive/Strive.Data/Strive.Data.Events/Strive.Data.Events.csproj
+++ b/Source/Strive/Strive.Data/Strive.Data.Events/Strive.Data.Events.csproj
@@ -65,6 +65,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TaskAssignmentEvent.cs" />
     <Compile Include="ProductionStartedEvent.cs" />
     <Compile Include="ProductionCompleteEvent.cs" />
     <Compile Include="ProductionUpdateEvent.cs" />
