--- a/Source/Strive/Strive.Network/Strive.Network.Messages/Strive.Network.Messages.csproj
+++ b/Source/Strive/Strive.Network/Strive.Network.Messages/Strive.Network.Messages.csproj
@@ -147,7 +147,7 @@
     <Compile Include="ToServer\CancelSkill.cs" />
     <Compile Include="ToServer\ChangeStance.cs" />
     <Compile Include="ToServer\Communicate.cs" />
-    <Compile Include="ToServer\CreatePlan.cs" />
+    <Compile Include="ToServer\CreateMission.cs" />
     <Compile Include="ToServer\ProduceEntity.cs" />
     <Compile Include="ToServer\CreateEntity.cs" />
     <Compile Include="ToServer\Emote.cs" />
