--- a/Source/Strive/Strive.Network/Strive.Network.Messaging.Tests/Strive.Network.Messaging.Tests.csproj
+++ b/Source/Strive/Strive.Network/Strive.Network.Messaging.Tests/Strive.Network.Messaging.Tests.csproj
@@ -60,6 +60,7 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FSharp.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
