--- a/Source/Strive/Strive.Server/Strive.Server.Logic.Tests/Strive.Server.Logic.Tests.csproj
+++ b/Source/Strive/Strive.Server/Strive.Server.Logic.Tests/Strive.Server.Logic.Tests.csproj
@@ -50,6 +50,7 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assumptions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WorldTests.cs" />
   </ItemGroup>
